// Generated by https://github.com/foxglove/foxglove-sdk

syntax = "proto3";

import "google/protobuf/timestamp.proto";

package foxglove;

message AppInfo {
  string app_name = 1;
  double exec_time = 2;
  double cpu_usage = 3;
}

// A log message
message AppExec {
  // Timestamp of log message
  google.protobuf.Timestamp timestamp = 1;
  int64 num_apps = 2;
  repeated AppInfo apps = 3;
}
